WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
14004
SVG units don't stay consistently sized on zoom
https://bugs.webkit.org/show_bug.cgi?id=14004
Summary
SVG units don't stay consistently sized on zoom
Eric Seidel (no email)
Reported
2007-06-05 13:22:00 PDT
SVG units don't stay consistently sized on zoom
http://hixie.ch/tests/adhoc/svg/rendering-model/004.xhtml
Attachments
Initial patch
(22.67 KB, patch)
2010-02-15 16:59 PST
,
Nikolas Zimmermann
no flags
Details
Formatted Diff
Diff
LayoutTest results
(1023.52 KB, patch)
2010-02-15 17:01 PST
,
Nikolas Zimmermann
no flags
Details
Formatted Diff
Diff
Updated patch
(22.89 KB, patch)
2010-02-16 04:22 PST
,
Nikolas Zimmermann
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
eddie svärd
Comment 1
2008-11-11 08:20:18 PST
This also affects the full page zoom on my windows xp, safari 4 dev2, WebKit-
r38240
Chris Bentley
Comment 2
2009-05-01 20:23:23 PDT
Might this also be related to
https://bugs.webkit.org/show_bug.cgi?id=10526
..which has the same effect...
Eric Seidel (no email)
Comment 3
2009-05-13 18:13:47 PDT
Yes, this seems broken. Also if you revert back to "Actual size" the SVG doesn't update to match.
Eric Seidel (no email)
Comment 4
2009-05-13 18:14:58 PDT
Oops, sorry, that comment was meant for
bug 18572
, which is probably the same bug, or at least related. I've not looked at FPZ + SVG yet, but eventually someone needs to sit down and take a look and see what needs fixing.
Nikolas Zimmermann
Comment 5
2010-02-15 12:19:12 PST
***
Bug 25178
has been marked as a duplicate of this bug. ***
Nikolas Zimmermann
Comment 6
2010-02-15 16:59:29 PST
Created
attachment 48781
[details]
Initial patch
Nikolas Zimmermann
Comment 7
2010-02-15 17:01:30 PST
Created
attachment 48782
[details]
LayoutTest results
Nikolas Zimmermann
Comment 8
2010-02-16 04:22:47 PST
Created
attachment 48805
[details]
Updated patch Uploaded a wrong version of the patch, this is the correct one which fits to the results :-)
Dave Hyatt
Comment 9
2010-02-16 14:29:48 PST
Comment on
attachment 48805
[details]
Updated patch r=me
Nikolas Zimmermann
Comment 10
2010-02-16 14:49:16 PST
Comment on
attachment 48782
[details]
LayoutTest results Clearing flags on attachment: 48782 Committed
r54833
: <
http://trac.webkit.org/changeset/54833
>
Nikolas Zimmermann
Comment 11
2010-02-16 14:51:36 PST
Comment on
attachment 48805
[details]
Updated patch Clearing flags on attachment: 48805 Committed
r54834
: <
http://trac.webkit.org/changeset/54834
>
Nikolas Zimmermann
Comment 12
2010-02-16 14:52:02 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug